--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,7 @@
   <properties>
   	<maven.compiler.source>11</maven.compiler.source>
   	<maven.compiler.target>11</maven.compiler.target>
+    <exec.mainClass>main.Main</exec.mainClass>
   </properties>
   <dependencies>
   	<dependency>
